# fastclean

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli_main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-app.yml
fastclean/: .commitlintrc.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  build_templates.py  cli_main.py  coverage.xml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_complate.sh
fastclean/.github/: PULL_REQUEST_TEMPLATE.md
fastclean/.github/workflows/: ci.yml  debug.yml  python-app.yml  release.yml  test.yml
fastclean/config/: constants.py  settings.py
fastclean/fastclean/: pyproject.toml
fastclean/fastclean/application/interfaces/: file_system.py  template_engine.py  validator.py
fastclean/fastclean/application/interfaces/add_feature/: add_authentication.py  add_caching.py  add_monitoring.py  dto.py
fastclean/fastclean/application/interfaces/api/: dependencyes.py
fastclean/fastclean/application/interfaces/api/v1/routes/: user.py
fastclean/fastclean/application/interfaces/schemas/: user.py
fastclean/fastclean/application/use_cases/create_project/: create_project.py  dto.py
fastclean/fastclean/application/use_cases/generate_crud/: dto.py  generate_crud.py
fastclean/fastclean/application/use_cases/user/: create_user.py  get_user.py  list_user.py
fastclean/fastclean/cli/: main.py
fastclean/fastclean/core/: use_case.py
fastclean/fastclean/core/entities/: base.py  project.py  template.py  user.py
fastclean/fastclean/core/exceptions/: base.py  validation.py
fastclean/fastclean/core/value_objects/: auth_type.py  cache_type.py  database_type.py  project_config.py
fastclean/fastclean/infrastructure/config/: settings.py
fastclean/fastclean/infrastructure/database/: database.py
fastclean/fastclean/infrastructure/database/models/: user_model.py
fastclean/fastclean/infrastructure/database/repositories/: user_repository.py
fastclean/fastclean/infrastructure/file_system/: local_file_system.py  path_resolver.py
fastclean/fastclean/infrastructure/generators/: auth_generator.py  base_generator.py  crud_generator.py  project_generator.py
fastclean/fastclean/infrastructure/templates/: jinja_engine.py  template_loader.py
fastclean/fastclean/infrastructure/validators/: name_validator.py  project_validator.py
fastclean/fastclean/presentation/cli/: base.py  crud_command.py  feature_command.py  init_command.py
fastclean/fastclean/presentation/formatters/: console_formatter.py  progress_bar.py
fastclean/fastclean/presentation/parsers/: argument_parser.py
fastclean/fastclean/repositories/: user_repository.py
fastclean/src/application/interfaces/: file_system.py  template_engine.py
fastclean/src/application/interfaces/add_feature/: add_authentication.py  add_caching.py  add_monitoring.py  dto.py
fastclean/src/application/interfaces/api/: dependencyes.py
fastclean/src/application/interfaces/api/v1/routes/: user.py
fastclean/src/application/use_cases/create_project/: create_project.py  dto.py
fastclean/src/application/use_cases/generate_crud/: dto.py  generate_crud.py
fastclean/src/application/use_cases/user/: list_user.py
fastclean/src/core/entities/: project.py  template.py
fastclean/src/core/exceptions/: base.py  validation.py
fastclean/src/core/value_objects/: auth_type.py  cache_type.py  database_type.py  project_config.py
fastclean/src/infrastructure/database/repositories/: user_repository.py
fastclean/src/infrastructure/file_system/: local_file_system.py  path_resolver.py
fastclean/src/infrastructure/generators/: auth_generator.py  base_generator.py  crud_generator.py  project_generator.py
fastclean/src/infrastructure/templates/: jinja_engine.py  template_loader.py
fastclean/src/presentation/cli/: base.py  crud_command.py  feature_command.py  init_command.py
fastclean/src/presentation/parsers/: argument_parser.py
fastclean/src/repositories/: user_repository.py
fastclean/templates/docker/: docker_compose.yml.j2
fastclean/tests/: conftest.py
fastclean/tests/unit/: test_cli.py
tests/integration/: test_product_api.py
tests/unit/: test_product_usecase.py
