[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastclean"
version = "1.0.0"
description = "CLI tool for FastAPI Clean Architecture"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
fastclean = "fastclean.cli_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastclean*"]