[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastclean"
version = "0.1.5"
description = "FastAPI Clean Architecture CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Amir Doustdar", email = "amir@example.com" }]
dependencies = [
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.9",
    "black>=23.0.0",
]

[project.scripts]
fastclean = "fastclean.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastclean*"]

[tool.setuptools.package-data]
fastclean = ["templates/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
